# open-webui

./: pyproject.toml
src/lib/components/chat/: ModelSelector.svelte
src/lib/i18n/locales/es-ES/: translation.json
src/lib/stores/: index.ts  permissions.ts
src/routes/: +layout.svelte
