[tool.poetry]
name = "open-webui"
version = "0.1.0"
description = "Open WebUI"
authors = ["Timothy Jaeryang Baek <tim@openwebui.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.111.0"
uvicorn = {version = "0.30.6", extras = ["standard"]}
pydantic = "2.9.2"
python-multipart = "0.0.18"
flask = "3.0.3"
flask-cors = "5.0.0"
python-socketio = "5.11.3"
python-jose = "3.3.0"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
requests = "2.32.3"
aiohttp = "3.11.8"
async-timeout = "^5.0.1"
aiocache = "^0.12.3"
aiofiles = "^24.1.0"
sqlalchemy = "2.0.32"
alembic = "1.14.0"
peewee = "3.17.6"
peewee-migrate = "1.12.2"
psycopg2-binary = "2.9.9"
pgvector = "0.3.5"
pymysql = "1.1.1"
bcrypt = "4.2.0"
pymongo = "^4.10.1"
redis = "^5.2.0"
boto3 = "1.35.53"
argon2-cffi = "23.1.0"
apscheduler = "3.10.4"
openai = "^1.56.0"
anthropic = "^0.40.0"
google-generativeai = "0.7.2"
tiktoken = "^0.8.0"
langchain = "0.3.7"
langchain-community = "0.3.7"
langchain-chroma = "0.1.4"
pydub = "^0.25.1"
markdown = "^3.7"
fake-useragent = "^1.5.1"
pymdown-extensions = "^10.12"
beautifulsoup4 = "^4.12.3"
pyjwt = "^2.10.1"
ftfy = "^6.3.1"
validators = "^0.34.0"
duckduckgo-search = "^6.3.7"
sentence-transformers = "^3.3.1"
ldap3 = "^2.9.1"
black = "^24.10.0"
fpdf = "^1.7.2"
authlib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
